# libswift

./: .gitignore  Makefile  Makefile.am  Makefile.old  client.c  configure.ac  libswift.spec  swift.c  swift.h  swift.pc.in  swift_private.h  test.c
src/: Makefile.am  client.c  client.h  curl_mockups.c  curl_mockups.h  swift.c  swift.h  swift_private.h
tests/: Makefile  Makefile.am  integration_test.c  test_swift.c
